# robostock

./: .gitignore  APPLIED_UI_CHANGES.md  ARCHITECTURE.md  LOG_FORMAT_GUIDE.md  MIGRATION_GUIDE.md  PHASE_5_6_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  UI_STYLE_GUIDE.md  VISIBLE_CHANGES_APPLIED.md  check_blocks.py  check_db.py  check_investor_trading.py  check_trading_value.py  debug_pykrx.py  drop_trading_data.py  migrate_db.py  pyproject.toml  requirements-uv.txt  requirements.txt  test_chart_viewer.py  view_db.py  개발계획서.md
.claude/: settings.local.json
data/: block_detector_settings.json
src/: main.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  detect_blocks_use_case.py
src/core/: __init__.py  config.py  enums.py  exceptions.py  settings_manager.py  signals.py
src/data/: __init__.py  database.py  models.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  price_data.py  stock.py  volume_block.py
src/domain/repositories/: __init__.py  block_repository.py  price_data_repository.py  (+1 more)
src/infrastructure/: __init__.py
src/resources/: __init__.py  icons.py
src/services/: __init__.py  block_detector.py  data_collector.py  trading_collector.py
src/shared/: __init__.py
src/styles/: __init__.py  animations.py  colors.py  performance.py  theme.py  theme_customizer.py  typography.py
src/ui/: __init__.py
tests/: __init__.py  conftest.py  test_block_detection.py  test_parallel_collection.py  test_skip_logic.py  test_system.py  test_time_logging.py  test_time_summary.py  test_trading_collection.py
(+42 files in other folders)
