[project]
name = "robostock"
version = "0.1.0"
description = "거래량 블록 기반 장기투자 분석 플랫폼"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Framework
    "PySide6==6.6.1",
    "PySide6-Addons==6.6.1",
    "PySide6-Essentials==6.6.1",

    # Data Processing
    "pandas==2.1.4",
    "numpy==1.26.2",

    # Visualization
    "matplotlib==3.8.2",
    "mplfinance==0.12.10b0",
    "seaborn==0.13.0",

    # Data Collection
    "pykrx==1.0.45",
    "dart-fss==0.4.6",
    "finance-datareader==0.9.50",

    # Database
    "sqlalchemy==2.0.23",

    # Machine Learning (optional, commented out due to build requirements)
    # "scikit-learn==1.3.2",
    # "xgboost==2.0.3",
    # "lightgbm==4.1.0",
    # "shap==0.44.0",

    # Utilities
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.1",
    "flake8==6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "black==23.12.1",
    "flake8==6.1.0",
]
